--- a/index.html
+++ b/index.html
@@ -9,5 +9,13 @@
       </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
+
+    <a-scene embedded arjs>
+        <a-marker preset="pattern" url='./assets/pattern-marker.patt'>
+          <a-box position="0 0.5 0" material="color: red;"></a-box>
+        </a-marker>
+        <a-entity camera></a-entity>
+      </a-scene>
+
   </body>
 </html>
