changes with address and origin

--- a/iframes/ar-frame.html
+++ b/iframes/ar-frame.html
@@ -85,7 +85,7 @@
         </a-marker>
         <a-entity camera></a-entity>
       </a-scene> -->
-      <script src="http://127.0.0.1:5500/assets/scripts/frame.js"></script>
+      <script src="../assets/scripts/frame.js"></script>
 
   </body>
 </html>
