--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 
   </head>
   <body style="height: 100vh;width: 100vw;display: flex;flex-direction: column;">
-    <iframe src="http://127.0.0.1:5500/iframes/ar-frame.html" frameborder="0" style="height: 75vh;width: 75vw;margin: auto;/* display: flex; *//* vertical-align: middle; *//* flex: 1 1 auto; */min-height: 75%;"></iframe>
-    <!-- <iframe src="http://127.0.0.1:5500/iframes/itemRenderer.html" id="childView"></iframe> -->
-    <script src="http://127.0.0.1:5500/assets/scripts/main.js"></script>
+    <iframe src="../iframes/ar-frame.html" frameborder="0" style="height: 75vh;width: 75vw;margin: auto;/* display: flex; *//* vertical-align: middle; *//* flex: 1 1 auto; */min-height: 75%;"></iframe>
+    <script src="../assets/scripts/main.js"></script>
  
   </body>
 </html>
