--- a/ar.html
+++ b/ar.html
@@ -9,7 +9,7 @@
         Please scan the marker to interact with the artefact
       </h3>
     </div>
-    <iframe class="arteology__camera" src="iframes/ar-frame.html" frameborder="0"></iframe>
+    <iframe class="arteology__camera" src="../ARteology/iframes/ar-frame.html" frameborder="0"></iframe>
     <script src="./assets/scripts/main.js"></script>
     <div class="arteology__content" id="contentWindow" >
      
