--- a/ar.html
+++ b/ar.html
@@ -6,7 +6,7 @@
   <body class="arteology arteology-body">
     <div class="arteology--header">
       <h3>
-        Please scan the marker to interact with the artefact
+        Please scan the marker to interact with the artefacts
       </h3>
     </div>
     <iframe class="arteology__camera" src="../ARteology/iframes/ar-frame.html" frameborder="0"></iframe>
