testing for github

--- a/ar.html
+++ b/ar.html
@@ -6,10 +6,10 @@
   <body class="arteology arteology-body">
     <div class="arteology--header">
       <h3>
-        Please scan the marker to interact with the artefacts
+        Please scan the marker to interact with the artefact
       </h3>
     </div>
-    <iframe class="arteology__camera" src="../ARteology/iframes/ar-frame.html" frameborder="0"></iframe>
+    <iframe class="arteology__camera" src="ar-frame.html" frameborder="0"></iframe>
     <script src="./assets/scripts/main.js"></script>
     <div class="arteology__content" id="contentWindow" >
      
