Clean up and some refactoring

--- a/iframes/ar-iframe.html
+++ b/iframes/ar-iframe.html
@@ -78,7 +78,7 @@
 
       <a-entity camera></a-entity>
     </a-scene>
-      <script src="../assets/scripts/frame.js"></script>
+      <script src="../scripts/frame.js"></script>
 
       <style>
         #arjsDebugUIContainer,.a-enter-vr-button{
