--- a/ar.html
+++ b/ar.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-<link rel="stylesheet" href="./assets/styles/css/main.css">
+<link rel="stylesheet" href="./styles/css/main.css">
   </head>
   <body class="arteology arteology-body">
     <div class="arteology--header">
@@ -10,7 +10,6 @@
       </h3>
     </div>
     <iframe class="arteology__camera" src="" frameborder="0"></iframe>
-    <script src="./assets/scripts/main.js"></script>
     <div class="arteology__content" id="contentWindow" >
      
       <div class="content__title" id="title">
@@ -25,5 +24,8 @@
       </iframe>
    
     </div>
+
+    <script src="./scripts/ar.js"></script>
+
   </body>
 </html>
