--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-<link rel="stylesheet" href="./assets/styles/css/main.css">
+<link rel="stylesheet" href="./styles/css/main.css">
   </head>
-  <body class="arteology">
+  <body class="arteology arteology__home arteology-body">
     <div class="arteology--header">
       <h2>
         Welcome to Arteology : a Hunt Museum AR Experience!
@@ -18,11 +18,11 @@
         </a> 
         <a href="explore.html">
             <div class="content_option">
-                <h4>Explore The Interactve Artefacts available in the museum</h4>
+                <h4>Explore The Interactive Artefacts available in the museum</h4>
             </div>
         </a>
     </div>
 
-    <script src="./assets/scripts/master.js"></script>
+    <script src="./scripts/master.js"></script>
   </body>
 </html>
