--- a/ar.html
+++ b/ar.html
@@ -4,13 +4,19 @@
 <link rel="stylesheet" href="./styles/css/main.css">
   </head>
   <body class="arteology arteology-body">
-    <div class="arteology--header">
-      <h3>
-        Please scan the marker to interact with the artefacts
-      </h3>
+    <div class="arteology__content">
+      <div class="arteology--header">
+        <h3 class="header--align-left " id="defaultExplore">
+          <a href="index.html">Home</a> /  Explore Augmented Reality
+        </h3>
+        <h3>
+          Please scan the marker to interact with the artefacts
+        </h3>
+      </div>
     </div>
+  
     <iframe class="arteology__camera" src="" frameborder="0"></iframe>
-    <div class="arteology__content" id="contentWindow" >
+    <div class="" id="contentWindow" >
      
       <div class="content__title" id="title">
 
