--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-<link rel="stylesheet" href="./styles/css/main.css">
+<link rel="stylesheet" href="./assets/styles/css/main.css">
   </head>
-  <body class="arteology arteology__home arteology-body">
+  <body class="arteology">
     <div class="arteology--header">
       <h2>
         Welcome to Arteology, A Hunt Museum AR Experience!
@@ -22,7 +22,6 @@
             </div>
         </a>
     </div>
-
-    <script src="./scripts/master.js"></script>
+    <script src="./assets/scripts/master.js"></script>
   </body>
 </html>
