--- a/index.html
+++ b/index.html
@@ -9,19 +9,11 @@
         Welcome to Arteology, A Hunt Museum AR Experience!
       </h2>
     </div>
-    
-    <div class="arteology__content" id="contentWindow" >
-        <a href="ar.html">
-            <div class="content_option">
-                <h4>Explore Augmented Reality Experience</h4>
-            </div>
-        </a> 
-        <a href="explore.html">
-            <div class="content_option">
-                <h4>Explore The Interactive Artefacts available in the museum</h4>
-            </div>
-        </a>
-    </div>
+    <div class='panel__container'>
+    <a href="ar.html" class='panel panel-flat'><img src="./assets/images/undraw_Art_lover_re_fn8g.png" alt=" explore AR Experience "/><h5>Explore Augmented Reality Experience</h5></a>
+    <a href="explore.html" class='panel panel-flat'><img src="./assets/images/undraw_art_museum_8or4.png" alt=" explore AR Experience "/><h5>Explore The Interactive Artefacts available in the museum</h5></a>
+      </div>
+
     <script src="./assets/scripts/master.js"></script>
   </body>
 </html>
