revert changes -- fixes

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-<link rel="stylesheet" href="./assets/styles/css/main.css">
+<link rel="stylesheet" href="./styles/css/main.css">
   </head>
-  <body class="arteology">
+  <body class="arteology arteology__home">
     <div class="arteology--header">
       <h2>
         Welcome to Arteology, A Hunt Museum AR Experience!
@@ -14,6 +14,6 @@
     <a href="explore.html" class='panel panel-flat'><img src="./assets/images/undraw_art_museum_8or4.png" alt=" explore AR Experience "/><h5>Explore The Interactive Artefacts available in the museum</h5></a>
       </div>
 
-    <script src="./assets/scripts/master.js"></script>
+    <script src="./scripts/master.js"></script>
   </body>
 </html>
