--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
 <link rel="stylesheet" href="./styles/css/main.css">
   </head>
-  <body class="arteology arteology__home">
+  <body class="arteology arteology__home  arteology-body">
     <div class="arteology--header">
       <h2>
         Welcome to Arteology, A Hunt Museum AR Experience!
